fix: fixed horizontal extra space during mobile resolution emulation

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -285,6 +285,7 @@ body {
 
 // mc-donate
 .mc-donate {
+  overflow: hidden;
   padding-bottom: 100px;
 
   .mc-head-wrapper {
